<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_phone"
            android:icon="@drawable/baseline_phone_locked_24"
            android:title="@string/phone_privacy"/>


        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/baseline_ios_share_24"
            android:title="@string/Share"/>

        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/baseline_mode_edit_24"
            android:title="@string/Edit"/>



        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_about_us_24"
            android:title="@string/About_Us"/>
    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout"/>
        </menu>

    </item>

</menu>