<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegisterActivity"
    android:background="@drawable/backgroundpurple">








<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="199dp"
        android:layout_height="200dp"
        android:layout_marginStart="92dp"
        android:background="#EAB9F3"
        android:padding="5dp"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/person_pic"
        app:strokeColor="@color/white"
        app:strokeWidth="5dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignBottom="@+id/imageView"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#EAB9F3"
        android:clickable="true"
        android:contentDescription="TODO"
        android:focusable="true"
        android:tint="@color/black"
        app:backgroundTint="#EAB9F3"

        app:srcCompat="@drawable/camera" />


</RelativeLayout>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="677dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RegisterPage"
                android:textAlignment="center"
                android:textColor="#EAB9F3"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reqInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/required_info"
                android:textSize="20sp"
                android:textColor="#AAA4A4"/>

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/purple"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="8dp"
                android:hint="@string/HintUserName"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#AAA4A4" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/purple"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:hint="@string/HintEmail"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#AAA4A4"/>

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/purple"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="8dp"
                android:hint="@string/HintPhone"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#AAA4A4"/>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/purple"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:hint="@string/HintPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:textColorHint="#AAA4A4"/>


            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/purple"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:hint="@string/HintConfirm"
                android:padding="8dp"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:textColorHint="#AAA4A4"/>

            <Button
                android:id="@+id/createAccountButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple_200"
                android:text="Sign Up"
                android:textColor="#6C4193"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                android:textStyle="bold"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>