<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogbkg"
    android:id="@+id/layoutfeedback">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_dash_24"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/createText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/feedback"
            android:padding="8dp"
            android:textColor="@color/lavender"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_back_24"
            android:layout_marginStart="250dp"
            android:layout_marginTop="8dp"
            android:id="@+id/cancelButton"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutFeedback"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">



        <EditText
            android:id="@+id/EnterFeedback"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/purple"
            android:drawableStart="@drawable/pen"
            android:drawablePadding="8dp"
            android:hint="@string/enter_feedback"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="#AAA4A4"
            android:inputType="text"/>

        <Button
            android:id="@+id/addFeedbackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Share"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/lavender"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/posts_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_bar"
            android:layout_marginTop="16dp"/>



    </LinearLayout>

</LinearLayout>
