<?xml version="1.0" encoding="UTF-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/lavender"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <FrameLayout
                    android:id="@+id/frame_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />



            </androidx.appcompat.widget.Toolbar>

            <RelativeLayout
                android:id="@+id/first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar">




                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageView"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:background="#8692f7"
                        android:padding="5dp"
                        app:shapeAppearanceOverlay="@style/circular"
                        app:srcCompat="@drawable/person_pic"
                        app:strokeColor="@color/white"
                        app:strokeWidth="5dp" />

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageView"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:text="@string/UserName"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/bio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/user_name"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:text="@string/bio"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />


                <Button
                    android:id="@+id/whatsUp"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_below="@+id/bio"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="26dp"
                    android:layout_marginEnd="147dp"
                    android:backgroundTint="@color/green"
                    android:text="What's UP"
                    android:enabled="false"/>

                <LinearLayout
                        android:id="@+id/last_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-5dp"
                        android:layout_marginTop="298dp"
                        android:layout_marginRight="-5dp"
                        android:background="#F9F9FB"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/my_fotos"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/purple_200"
                            android:contentDescription="@string/grid"
                            android:src="@drawable/ic_grid" />

                        <ImageButton
                            android:id="@+id/courses"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:contentDescription="@string/courses"
                            android:src="@drawable/ic_courses" />

                        <ImageButton
                            android:id="@+id/product"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:contentDescription="@string/products"
                            android:src="@drawable/ic_products2" />

                        <ImageButton
                            android:id="@+id/services"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:contentDescription="@string/services"
                            android:src="@drawable/ic_services" />


                    </LinearLayout>

                <TextView
                    android:id="@+id/showPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bio"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="26dp"
                    android:layout_marginEnd="175dp"
                    android:text="" />

            </RelativeLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/posts_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="390dp"

                tools:spanCount="4"
                tools:layoutManager="GridLayoutManager" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/feedback_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="71dp"
                android:contentDescription="@string/feedback"
                android:src="@drawable/feedback"
                app:backgroundTint="@color/lavender" />

        </RelativeLayout>


                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <com.google.android.material.bottomappbar.BottomAppBar
                        android:id="@+id/bottomAppBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@color/white"
                        app:fabCradleMargin="10dp"
                        app:fabCradleRoundedCornerRadius="50dp">

                        <com.google.android.material.bottomnavigation.BottomNavigationView
                            android:id="@+id/bottomNavigationView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:background="@android:color/transparent"
                            app:labelVisibilityMode="labeled"
                            app:menu="@menu/bottom_menu" />

                    </com.google.android.material.bottomappbar.BottomAppBar>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:contentDescription="@string/add"
                        android:src="@drawable/baseline_add_circle_24"
                        app:layout_anchor="@id/bottomAppBar"
                        app:maxImageSize="40dp"
                        app:tint="@color/lavender" />

                </androidx.coordinatorlayout.widget.CoordinatorLayout>



    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        app:itemIconTint="@color/lavender"
        app:itemTextColor="@color/lavender"/>





</androidx.drawerlayout.widget.DrawerLayout>
