<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customer_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".ProfileCustomer">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/lavender"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            <FrameLayout
                android:id="@+id/frame_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.appcompat.widget.Toolbar>
        <RelativeLayout
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar">
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="#8692f7"
                android:padding="5dp"
                app:shapeAppearanceOverlay="@style/circular"
                app:srcCompat="@drawable/person_pic"
                app:strokeColor="@color/white"
                app:strokeWidth="5dp" />
            <ImageButton
                android:id="@+id/backToHomeC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:background="@color/white"
                android:src="@drawable/baseline_arrow_forward_24"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck" />
            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/UserName"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/bio"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
            <Button
                android:id="@+id/whatsUp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/bio"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="147dp"
                android:backgroundTint="@color/green"
                android:text="WhatsApp"
                android:typeface="monospace" />

            <LinearLayout
                android:id="@+id/last_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-5dp"
                android:layout_marginTop="298dp"
                android:layout_marginRight="-5dp"
                android:background="#F9F9FB"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/my_fotos"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/purple_200"
                    android:contentDescription="@string/grid"
                    android:src="@drawable/ic_grid" />
                <ImageButton
                    android:id="@+id/courses"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/courses"
                    android:src="@drawable/ic_courses" />
                <ImageButton
                    android:id="@+id/product"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/products"
                    android:src="@drawable/ic_products2" />
                <ImageButton
                    android:id="@+id/services"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/services"
                    android:src="@drawable/ic_services" />

            </LinearLayout>
            <TextView
                android:id="@+id/showPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bio"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="175dp"
                android:text="" />
            <!-- Remaining layout -->
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/posts_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addFeedbackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="71dp"
            app:srcCompat="@drawable/feedback"
            app:backgroundTint="@color/lavender" />

    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view_customer"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu_customer"
        app:itemIconTint="@color/lavender"
        app:itemTextColor="@color/lavender" />



</androidx.drawerlayout.widget.DrawerLayout>
